@@ -10,7 +10,7 @@ print STDERR "Processing sample 1-8\n";
 	991207 991208
 );
 
-@sub = qw(0 0 1 0 0 0 0 0 1 1 1 1 2 3 1 1 1 1 2 2 6 8 8);
+@sub = qw(0 0 0 0 0 0 0 0 1 1 1 1 2 3 1 1 1 1 2 2 6 8 8);
 @def = qw(0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0);
 @rej = qw(0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0);
 @opn = qw(4 4 4 5 4 4 4 4 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3);
